--- a/index.html
+++ b/index.html
@@ -101,7 +101,14 @@
         <input type="text" id="name" required><br><br>
 
         <label>Form (年级):</label><br>
-        <input type="text" id="form" required><br><br>
+        <select id="form" required>
+            <option value="">Select</option>
+            <option value="F1">F1</option>
+            <option value="F2">F2</option>
+            <option value="F3">F3</option>
+            <option value="F4">F4</option>
+            <option value="F5">F5</option>
+        </select><br><br>
 
         <div id="questions"></div>
 
